# openjobs

./: .env.example  .gitignore  BROWSER_AUDIT.md  CHANGELOG.md  CONTRIBUTING.md  Makefile  README.md  SECURITY.md  STATUS.md  audit_browser.py  audit_careers.py  docker-compose.yml  llms-full.txt  llms.txt  nuq.sql  pyproject.toml  start.sh  test_multi_company.py  test_results.json  verification_results.json  verify_results.py
.github/: dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml
demo/: record_demo.py
docs/: announcements.md
examples/: basic_usage.py
openjobs/: __init__.py  http_utils.py  processor.py  scraper.py
tests/: test_scraper_mocked.py
